# study-database-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude_desktop_config.example.json  cowork_config.example.json  docker-compose.yml  pyproject.toml
data/raw/: README.md
docs/: DEPLOY.md
docs/vision/: 01-vision.md  02-scope.md  03-architecture.md  04-vault-structure.md  05-data-model.md  06-self-pruning.md  07-connectors-credentials.md  08-search.md  09-hosting-auth.md  10-cost.md  11-roadmap.md  12-open-questions.md  13-build-plan.md  14-prior-art.md  15-database-ai-architecture.md  16-retrieval-and-tagging.md  README.md
scripts/: catalog.py  reindex.py  vault_admin.py  vault_import.py  vault_index.py  vault_schedule.py  vault_sync.py  vault_web.py
servers/calculator/: server.py
servers/knowledge/: catalog.py  chunk.py  graph.py  ingest.py  retrieve.py  server.py  store.py
servers/vault/: __init__.py  archive.py  audit.py  auth.py  backup.py  capture.py  config.py  credentials.py  crypto.py  db.py  db_postgres.py  db_sqlite.py  frontmatter.py  index.py  lexical.py  note.py  prune.py  relations.py  scheduler.py  search.py  server.py  staging.py  textutil.py  walk.py  web.py
servers/vault/connectors/: __init__.py  base.py  calendar.py  cursors.py  gmail.py  google_auth.py  google_fetch.py  mail_triage.py  sync.py
skills/d2l-deadline-scraper/: D2L-TERRAIN-MAP.md  SKILL.md
skills/email-context-capture/: SKILL.md
skills/exact-math/: SKILL.md
skills/study-assistant/: SKILL.md
tests/: check_calculator.py  check_catalog.py  check_knowledge.py  check_vault.py  check_vault_archive.py  check_vault_capture.py  check_vault_connectors.py  check_vault_efficiency.py  check_vault_google.py  check_vault_hybrid.py  check_vault_mail_triage.py  check_vault_prune.py  check_vault_prune_scores.py  check_vault_scheduler.py  check_vault_serve.py  check_vault_smart_capture.py  check_vault_staging.py  check_vault_sync.py  check_vault_usability.py  check_vault_web.py  test_backends.py  test_edge_cases.py  test_knowledge_edges.py  test_pdf.py  test_perf.py
