[project]
name = "study-database-mcp"
version = "0.1.0"
description = "Two MCP servers for reliable studying: a deterministic calculator and a hybrid (vector + light graph) knowledge retriever."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Base install is intentionally tiny. Each server is installed via its own
# extra so they stay independently restartable with different failure modes.
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
# --- Calculator server -------------------------------------------------------
calculator = [
    "sympy>=1.13.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "mpmath>=1.3.0",
    "Pint>=0.23",
]

# --- Knowledge server: core retrieval (no heavy ML, runs fully offline) ------
# numpy vector store + hash embeddings let the whole pipeline run and be
# verified with zero network access or large downloads.
knowledge = [
    "numpy>=1.26.0",
    "networkx>=3.2",
    "python-dotenv>=1.0.0",
]

# Optional embedding backends (pick via EMBEDDING_PROVIDER)
embeddings-openai = ["openai>=1.40.0"]
embeddings-local = ["sentence-transformers>=3.0.0"]

# Optional scalable vector stores (pick via VECTOR_STORE)
store-lancedb = ["lancedb>=0.13.0", "pyarrow>=16.0.0"]
store-chroma = ["chromadb>=0.5.0"]

# Optional PDF -> Markdown converters (pick via PDF_CONVERTER)
pdf-pymupdf = ["pymupdf4llm>=0.0.17"]
pdf-marker = ["marker-pdf>=1.0.0"]

# Optional full GraphRAG layer (off by default; see ENABLE_GRAPHRAG)
graphrag = ["graphrag>=0.3.0"]

dev = ["pytest>=8.0.0"]

[project.scripts]
study-calculator = "servers.calculator.server:main"
study-knowledge = "servers.knowledge.server:main"
study-reindex = "scripts.reindex:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["servers", "servers.calculator", "servers.knowledge", "scripts"]
