[project]
name = "life-vault-mcp"
version = "0.1.0"
description = "Self-hosted personal 'Life MCP': a Markdown vault back end + Google Calendar timeline + a knowledge Librarian (hybrid vector + lexical search), served to Claude/Cowork over MCP stdio."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Base install is intentionally tiny. Each server installs via its own extra so
# they stay independently restartable with different failure modes.
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
# --- Knowledge server / the "Librarian": core retrieval (offline-capable) -----
# numpy vector store + hash embeddings let the whole pipeline run and be verified
# with zero network access. Install embeddings-local for real semantic search.
knowledge = [
    "numpy>=1.26.0",
    "networkx>=3.2",
    "python-dotenv>=1.0.0",
]

# Embedding backends (pick via EMBEDDING_PROVIDER). `local` is the recommended
# default for real semantic search: free, offline, private (no cloud round-trip
# for your personal data).
embeddings-local = ["sentence-transformers>=3.0.0"]
embeddings-openai = ["openai>=1.40.0"]

# Optional scalable vector stores (pick via VECTOR_STORE). numpy (default) needs
# nothing; these help only once a corpus grows large.
store-lancedb = ["lancedb>=0.13.0", "pyarrow>=16.0.0"]
store-chroma = ["chromadb>=0.5.0"]

# Optional encryption-at-rest for the credential store (set VAULT_MASTER_KEY).
# A local single-user setup can run without it (plaintext secrets in the
# gitignored .vault/); enable this to encrypt them.
crypto = ["cryptography>=42.0.0"]

# Google connectors: OAuth consent + token refresh for read-only Calendar + Gmail
# ingestion. google-auth-oauthlib pulls google-auth and requests; the thin REST
# fetch layer reuses requests, so this is the only name we add.
connectors-google = ["google-auth-oauthlib>=1.2.0"]

# Optional PDF -> Markdown converters (pick via PDF_CONVERTER)
pdf-pymupdf = ["pymupdf4llm>=0.0.17"]
pdf-marker = ["marker-pdf>=1.0.0"]

# Optional full GraphRAG layer (off by default; see ENABLE_GRAPHRAG)
graphrag = ["graphrag>=0.3.0"]

dev = ["pytest>=8.0.0"]

[project.scripts]
life-knowledge = "servers.knowledge.server:main"
life-reindex = "scripts.reindex:main"
life-catalog = "scripts.catalog:main"
life-vault = "servers.vault.server:main"
life-vault-index = "scripts.vault_index:main"
life-vault-schedule = "scripts.vault_schedule:main"
life-vault-sync = "scripts.vault_sync:main"
life-vault-import = "scripts.vault_import:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["servers", "servers.knowledge", "servers.vault", "scripts"]
